Switch to old function where possible, add more UTs